k8s/staging.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sparkplug-staging.eclipse.org
  namespace: foundation-internal-webdev-apps
spec:
  selector:
    matchLabels:
      app: sparkplug.eclipse.org
      environment: staging
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - preference:
          matchExpressions:
          - key: speed
            operator: NotIn
            values:
            - fast
        weight: 1
  replicas: 1
  template:
    metadata:
      labels:
        app: sparkplug.eclipse.org
        environment: staging
    spec:
      containers:
      - name: nginx
        image: eclipsefdn/sparkplug.eclipse.org
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 200m
            memory: 64Mi
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: sparkplug-staging-eclipse-org
  namespace: foundation-internal-webdev-apps
spec:
  ports:
  - name: "http"
    port: 80
    protocol: "TCP"
    targetPort: 8080
  selector:
    app: sparkplug.eclipse.org
    environment: staging
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  name: sparkplug-staging.eclipse.org
  namespace: foundation-internal-webdev-apps
  annotations:
    haproxy.router.openshift.io/timeout: 20s
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/balance: roundrobin
spec:
  host: "sparkplug-staging.eclipse.org"
  path: "/"
  port:
    targetPort: "http"
  tls:
    insecureEdgeTerminationPolicy: "Redirect"
    termination: "edge"
  to:
    kind: "Service"
    name: sparkplug-staging-eclipse-org
    weight: 100
